#
# $Header: /backup/cvsroot/project/pnids/zdk/Makefile.am,v 1.2 2001/11/02 19:48:00 zls Exp $
#
# $Date: 2001/11/02 19:48:00 $
#
# $Revision: 1.2 $
#
# $Name:  $
#
# $Author: zls $
#
# Copyright(C) since 1998 by Albert Zheng - 郑立松, All Rights Reserved.
#
# lisong.zheng@gmail.com
#
# $State: Exp $
#


SUBDIRS = zls
