#
# $Header: /backup/cvsroot/project/pnids/zdk/zls/Makefile.am,v 1.2 2001/11/02 19:53:26 zls Exp $
#
# $Date: 2001/11/02 19:53:26 $
#
# $Revision: 1.2 $
#
# $Name:  $
#
# $Author: zls $
#
# Copyright(C) since 1998 by Albert Zheng - 郑立松, All Rights Reserved.
#
# lisong.zheng@gmail.com
#
# $State: Exp $
#


SUBDIRS = zfc zvm zlang

# 指示这个目录下要被安装的include文件及被安装位置
#pkginclude_HEADERS = config.h
#pkgincludedir = ${includedir}/zls
