AC_INIT(src/Parser.cpp)

PACKAGE=libantlr
VERSION="2.7.1"
LIBANTLR_SO_VERSION=0:0:0

AC_CONFIG_AUX_DIR(scripts)
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

AM_DISABLE_SHARED
AM_PROG_LIBTOOL
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_RANLIB

test "$ac_cv_prog_gxx" = 'yes' && CXXFLAGS="$CXXFLAGS -W -Wall -pipe -D_PTHREADS"

dnl
dnl Debug mode
dnl
AC_ARG_ENABLE(debug,
  [  --disable-debug         Turn off debugging],
  [
    case "${enableval}" in
      yes) debug=true ;;
      no ) debug=false ;;
      *  ) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
    esac
  ],
  [
    debug=true
  ]
)
AM_CONDITIONAL(DEBUG, test x$debug = xtrue)

AC_SUBST(LIBANTLR_SO_VERSION)
AC_SUBST(LIBTOOL_DEPS)

AC_OUTPUT(Makefile \
          src/Makefile \
          antlr/Makefile)
